Fixes font resizing and overflow issues

--- a/src/shared/styles/header.css
+++ b/src/shared/styles/header.css
@@ -13,11 +13,11 @@
     font-size: 4rem;
     position: absolute;
     top: 25rem;
-    left: 2rem;
+    left: calc(50vw - 50%);
 }
 
 .hero__profile-img {
-    width: calc(100% - 2rem);
+    width: calc(100vw - 20%);
     margin-left: 1rem;
     margin-right: 1rem;
     height: 35rem;
@@ -35,6 +35,7 @@
     font-size: 1.4rem;
     margin-top: -1rem;
     padding: 1rem;
+    
 }
 
 .hero__icon-links {
